# ClashMetaForAndroid

./: .cursorignore  .gitmodules  CustomKey.ahk  build.gradle.kts  tmp_inject_tunnel.py  txt.txt
.github/workflows/: build-debug.yaml  build-pre-release.yaml  build-release.yaml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-01-23_05-16-31Z-代理和配置-ui-脚本.md  2026-01-27_02-15-00Z-build-workflow-custom-kernel-alpha-branch.md  2026-01-27_07-04-40Z-unresolved-reference-'design'-error.md  2026-01-27_08-43-23Z-pre-release-build-signature-mismatch.md  2026-01-27_10-29-34Z-fallback-notifications.md  2026-01-28_12-42-36Z-图标和软件名称修改.md  2026-01-29_11-59-51Z-android-log-format-and-styling.md  2026-01-29_13-03-35Z-go-module-build-failure.md  2026-01-29_13-40-33Z-日志域名后缀高亮.md  2026-01-30_00-57-27Z-highlighting-precision-for-domain-and-process-names.md  2026-01-30_02-01-45Z-安卓-group-fallback-节点切换.md  2026-01-30_03-24-36Z-clash-verge-rev-fallback-组节点手动选择.md  2026-01-30_04-24-30Z-selected-timeout-配置与测速逻辑.md  2026-01-30_04-35-28Z-clash-verge-rev-built-in-enhanced-features.md  2026-01-30_04-54-37Z-android-node-selection-logic.md  2026-01-30_05-16-56Z-安卓节点延迟数据更新问题.md  2026-01-30_09-45-20Z-节点切换后速度显示.md  2026-01-30_10-17-29Z-安卓主界面帮助项删除.md  2026-01-30_11-41-24Z-clash-verge-rev-external-control-setting.md  2026-01-30_11-53-03Z-安卓端-golang-构建失败.md  2026-01-30_12-05-50Z-安卓端-kotlin-编译错误.md  2026-01-30_14-00-39Z-clash-verge-rev-fallback-group-logic.md  2026-01-30_14-06-16Z-clash-verge-rev-default-test-link-configuration.md  2026-01-30_14-12-11Z-clash-verge-rev-fallback-node-selection.md  2026-01-31_00-47-07Z-安卓代理默认节点选择.md  2026-01-31_02-27-16Z-android-link-interface-error.md  2026-01-31_02-28-02Z-安卓代理界面默认节点选择.md  2026-01-31_02-36-41Z-tun-模式管理员权限提示.md  2026-01-31_02-48-02Z-安卓连接界面闪退.md  2026-01-31_03-12-15Z-安卓-info-日志对性能和耗电的影响.md  2026-01-31_03-15-34Z-android-connection-interface-sort-button-logic.md  2026-01-31_03-33-39Z-proxy-groups-typescript-error.md  2026-01-31_05-01-20Z-安卓端连接与设置问题.md  2026-01-31_05-02-46Z-电脑端构建-typescript-类型错误.md  2026-01-31_06-46-59Z-电脑端节点选择bug及改进.md  2026-01-31_10-15-19Z-电脑端节点选择与安卓逻辑.md  2026-01-31_10-45-40Z-安卓端全局模式测速失败.md  2026-01-31_10-52-03Z-安卓代理规则模式与节点显示.md  2026-01-31_11-31-15Z-电脑端-tun-模式节点显示问题.md  2026-01-31_13-45-44Z-android-proxy-interface-logic-review.md  (+166 more)
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: AccessControlActivity.kt  AppCrashedActivity.kt  BaseActivity.kt  ConnectionsActivity.kt  ConnectivityStatsActivity.kt  DebugActivity.kt  ExternalControlActivity.kt  FilesActivity.kt  LogcatActivity.kt  LogsActivity.kt  MainActivity.kt  MainApplication.kt  MetaFeatureSettingsActivity.kt  NetworkSettingsActivity.kt  NewProfileActivity.kt  OverrideSettingsActivity.kt  PropertiesActivity.kt  ProvidersActivity.kt  ProxyActivity.kt  RestartReceiver.kt  RunningConfigActivity.kt  TileService.kt
app/src/main/java/com/github/kr328/clash/remote/: Broadcasts.kt
app/src/main/java/com/github/kr328/clash/share/: RuntimeLanShareServer.kt
app/src/main/java/com/github/kr328/clash/util/: Remote.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
common/src/main/java/com/github/kr328/clash/common/: ProxyGroupRefresh.kt
common/src/main/java/com/github/kr328/clash/common/constants/: Intents.kt  UiPreferences.kt
config/: custom-clash-script.js  new-clash-config.yaml  请求链路与DNS说明.md
core/src/main/cpp/: CMakeLists.txt  main.c
core/src/main/golang/native/: app.go  bridge.c  bridge.h  config.go  connections.go  log.go  main.go  tunnel.go
core/src/main/golang/native/app/: dns.go
core/src/main/golang/native/config/: connectivity_patch.go  fetch.go  load.go  override.go  process.go
core/src/main/golang/native/connectivity/: config_order.go  region.go  sort.go  stats.go  stats_test.go
core/src/main/golang/native/delegate/: init.go
core/src/main/golang/native/tunnel/: connections.go  connectivity.go  proxies.go  proxy_connectivity_stats.go  proxy_region_sort.go
core/src/main/java/com/github/kr328/clash/core/: Clash.kt
design/: build.gradle.kts
design/src/main/java/com/github/kr328/clash/design/: AppCrashedDesign.kt  ConnectionsDesign.kt  ConnectivityStatsDesign.kt  DebugDesign.kt  Design.kt  LogcatDesign.kt  LogsDesign.kt  MainDesign.kt  NetworkSettingsDesign.kt  PropertiesDesign.kt  ProxyDesign.kt  RunningConfigDesign.kt
design/src/main/res/drawable/: ic_baseline_gps_fixed.xml  ic_baseline_my_location.xml  ic_outline_qr_code_scanner.xml
design/src/main/res/layout/: adapter_connection_item.xml  adapter_connectivity_stats.xml  adapter_debug_entry.xml  adapter_log_message.xml  design_about.xml  design_app_crashed.xml  design_connections.xml  design_connectivity_stats.xml  design_debug.xml  design_logcat.xml  design_logs.xml  design_main.xml  design_properties.xml  design_proxy.xml  design_running_config.xml
design/src/main/res/values/: colors.xml  dimens.xml  strings.xml
design/src/main/res/values-ja-rJP/: strings.xml
design/src/main/res/values-ko-rKR/: strings.xml
design/src/main/res/values-ru/: strings.xml
design/src/main/res/values-vi/: strings.xml
design/src/main/res/values-zh/: strings.xml
design/src/main/res/values-zh-rHK/: strings.xml
design/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
service/src/main/java/com/github/kr328/clash/service/: ClashManager.kt  ClashService.kt  ProfileProcessor.kt  TunService.kt
service/src/main/res/values/: strings.xml
service/src/main/res/values-ru/: strings.xml
service/src/main/res/values-zh/: strings.xml
service/src/main/res/values-zh-rHK/: strings.xml
service/src/main/res/values-zh-rTW/: strings.xml
(+41 files in other folders)
